# Data-Science-Portfolio

./: .gitignore  README.md  pyproject.toml  vae.ipynb
computer_vision/: image_classification_from_scratch.ipynb
notebooks/: sklearn-examples.ipynb
src/models/: train_models.py
